<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qr"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:ellipsize="marquee"
                    android:padding="5dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destiny"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/destiny"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:ellipsize="marquee"
                    android:padding="5dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_for_round_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_round_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_round"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_trip_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_trip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Asiento"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/seat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clase"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/class_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>
