<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:ellipsize="marquee"
                    android:padding="5dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destiny"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/destiny"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:ellipsize="marquee"
                    android:padding="5dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:text="Vuelo de ida"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_for_round_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/date_round"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_round_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_round"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_trip_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_trip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/price_round"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/vuelo_regreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:text="Vuelo de regreso"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row_date_trip"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_for_trip_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/date_trip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_round_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_round2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_for_trip_travel"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_trip2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/price_trip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/price_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_background"
                    android:padding="5dp" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/bt_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bar_white"
            android:onClick="next"
            android:padding="10dp"
            android:text="Reservar"
            android:textColor="@color/gris_oscuro" />

    </LinearLayout>

</ScrollView>
